--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
                 </p>
 
                 <div class="row members-list">
-                    <div class="col col-third text-center ">
+                    <div class="member-item col col-third text-center ">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/team/member1.jpg" alt="Name" class="member-img">
                     </div>
 
-                    <div class="col col-third text-center">
+                    <div class="member-item col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/team/member1.jpg" alt="Name" class="member-img">
                     </div>
 
-                    <div class="col col-third text-center">
+                    <div class="member-item col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/team/member1.jpg" alt="Name" class="member-img">
                     </div>
@@ -120,7 +120,7 @@
                         </ul>
                         <!-- Places  -->
                         <div class="row places-lists">
-                            <div class="col col-third">
+                            <div class="mt-16 s-col-full col col-third">
                                 <img src="./assets/img/place/place1.jpg" alt="New York" class="place-img">
                                 <div class="place-body">
                                     <h3 class="place-heading">
@@ -135,11 +135,11 @@
                                         Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                                     </p>
 
-                                    <button class="place-buy-btn js-buy-tickets">Buy Tickets</button>
+                                    <button class="place-buy-btn js-buy-tickets s-full-width">Buy Tickets</button>
                                 </div>
                             </div>
 
-                            <div class="col col-third">
+                            <div class="mt-16 s-col-full col col-third">
                                 <img src="./assets/img/place/place2.jpg" alt="New York" class="place-img">
                                 <div class="place-body">
                                     <h3 class="place-heading">
@@ -154,11 +154,11 @@
                                         Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                                     </p>
 
-                                    <button class="place-buy-btn js-buy-tickets">Buy Tickets</button>
+                                    <button class="place-buy-btn js-buy-tickets s-full-width">Buy Tickets</button>
                                 </div>
                             </div>
 
-                            <div class="col col-third">
+                            <div class="mt-16 s-col-full col col-third">
                                 <img src="./assets/img/place/place3.jpg" alt="New York" class="place-img">
                                 <div class="place-body">
                                     <h3 class="place-heading">
@@ -173,7 +173,7 @@
                                         Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                                     </p>
 
-                                    <button class="place-buy-btn js-buy-tickets">Buy Tickets</button>
+                                    <button class="place-buy-btn js-buy-tickets s-full-width">Buy Tickets</button>
                                 </div>
                             </div>
 
@@ -197,20 +197,21 @@
                 </p>
 
                 <div class="row contact-content">
-                    <div class="col col-half contact-info">
+                    <div class="col s-col-full col-half contact-info">
                         <p><i class="ti-location-pin"></i>Chicago,US</p>
                         <p><i class="ti-mobile"></i>Phone: +00 151515</p>
                         <p><i class="ti-email"></i>Email: mail@mail.com</p>
                     </div>
-                    <div class="col col-half contact-form">
+                    <div class="col s-col-full col-half contact-form">
                         <form action="">
                             <div class="row mt-8">
-                                <div class="col col-half">
+                                <div class="col col-half s-col-full">
                                     <input type="text" class="form-control" name="" required placeholder="Name">
                                 </div>
 
-                                <div class="col col-half">
-                                    <input type="email" class="form-control" required name="" placeholder="Email">
+                                <div class="col col-half s-col-full">
+                                    <input type="email" class="s-mt-8 form-control" required name=""
+                                        placeholder="Email">
                                 </div>
                             </div>
 
@@ -221,7 +222,7 @@
                                 </div>
                             </div>
 
-                            <input type="submit" value="SEND" class="mt-16 form-submit-btn">
+                            <input type="submit" value="SEND" class="mt-16 form-submit-btn s-full-width">
                         </form>
                     </div>
                 </div>
@@ -333,11 +334,23 @@
 
         // tu dong dong menu 
         var menuItems = document.querySelectorAll('#nav li a[href *="#"');
-        console.log(menuItems);
+
         for (var i = 0; i < menuItems.length; i++) {
             var menuItem = menuItems[i];
-            menuItem.onclick = function () {
-                header.style.height = null;
+
+            // console.log(menuItem.nextElementSibling);
+
+
+            menuItem.onclick = function (event) {
+                var isParentMenu = this.nextElementSibling && this.nextElementSibling.classList.contains('subnav');
+
+                if (!isParentMenu) {
+                    header.style.height = null;
+                }
+
+                else {
+                    event.preventDefault();
+                }
             }
         }
     </script>
